# goit-data_science-hw-01

./: Dockerfile  pyproject.toml
