[tool.poetry]
name = "goit-data-science-hw-01"
version = "0.1.0"
description = "Personal assistant"
authors = ["Bohdan Tsviliy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
datetime = "^5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
